--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "firebase": "^10.5.0",
+    "font-awesome": "^4.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-sweetalert2": "^0.6.0",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.32"
+    "sort-by": "^0.0.2",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
